--- a/nomalisation/1.ipynb
+++ b/nomalisation/1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "36d49d6a",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "9f4c5c1a",
    "metadata": {},
    "outputs": [
@@ -45,21 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a2d6b0c1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'(' was never closed (2796965364.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdata = np.array(10, 20, 30, 40, 50\u001b[39m\n                   ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m '(' was never closed\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.795864494290713, -0.511010608047833, 1.966355008670547, -0.43332318452704766, -0.22615672180495316]\n"
      ]
     }
    ],
    "source": [
-    "data = np.array(10, 20, 30, 40, 50)\n",
+    "data = [12,45,332,54,78]\n",
     "\n",
     "mean = sum(data) / len(data)\n",
     "std = (sum((x - mean) ** 2 for x in data) / len(data)) ** 0.5\n",
@@ -71,10 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cce606af",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.41421356 -0.70710678  0.          0.70710678  1.41421356]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
